add-snake-and-mongoose

--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -13,7 +13,7 @@ templateClass: tmpl-home
 <h2>The Combatants have entered the ring.</h2>
 
 <span id="battle-ring">
-  <h3>Mongoose</h3>
+  <h3 class="blue">Mongoose</h3>
   {% image "./img/mongoose.jpeg", "an evil mongoose", "100vw" %}
   <h3>Snake</h3>
    {% image "./img/snake.jpeg", "a suspicious snake", "100vw" %}
