--- a/_includes/layouts/our-mission.njk
+++ b/_includes/layouts/our-mission.njk
@@ -2,6 +2,8 @@
 layout: layouts/base.njk
 templateClass: tmpl-our-mission
 ---
+<div class="mongoose">some text</div>
+
 
 Dont put content in the template, unless there is a special reason for it. Put the content in `our-mission/index.md`
 
