whatever-this-is

--- a/_includes/layouts/our-methodology.njk
+++ b/_includes/layouts/our-methodology.njk
@@ -3,8 +3,13 @@ layout: layouts/base.njk
 templateClass: tmpl-our-methodology
 ---
 
-Methodology forthcoming.
+
+<center><h1>CONTENT NEEDS EDITING</h1></center>
+
+<center><h2><mark>Free Free API Education is more than just an education platform</mark></h2></center>
 
 <hr />
+
+
 
 {{ content | safe }}
