--- a/_includes/layouts/experiment-graphing.njk
+++ b/_includes/layouts/experiment-graphing.njk
@@ -5,39 +5,49 @@ templateClass: tmpl-experiment-graphing
 
 <script id="analyte-interaction">
 
+  const retrieveAnalyte = (analyteIdentifier) => {
+       console.info("retrieveAnalyte()")      
+  }
+
+  const clearAnalyte = () => {
+      console.info("clearAnalyte()")
+  }
+
+
+
 </script>
 
+<div id="analyte-tables">
+{% for analyte in analyteData.data %}
 
-var items = [{ title: "foo", id: 1 }, { title: "bar", id: 2}];
-    
-   <table id="analyte-table">
+   <table class="analyte-table" id="{{analyte.id}}">
          
-         <th id="analyte-table-header">Table Header</th>
+         <th id="analyte-table-header">{{analyte.name}}</th>
 
          <tr class="analyte-data-row" id="analyte-row1">
-           <td class="analyte-data-col" id="analyte-row1-col1">R1C1</td>
-           <td class="analyte-data-col" id="analyte-row1-col2">R1C2</td>
+           <td class="analyte-data-col" id="analyte-row1-col1">{{analyte.row1[0]}}</td>
+           <td class="analyte-data-col" id="analyte-row1-col2">{{analyte.row1[1]}}</td>
          </tr>
 
           <tr class="analyte-data-row" id="analyte-row2">
-             <td class="analyte-data-col" id="analyte-row2-col1">R2C1</td>
-             <td class="analyte-data-col" id="analyte-row2-col2">R2C2</td>
+             <td class="analyte-data-col" id="analyte-row2-col1">{{analyte.row2[0]}}</td>
+             <td class="analyte-data-col" id="analyte-row2-col2">{{analyte.row2[1]}}</td>
           </tr>
 
           <tr class="analyte-data-row" id="analyte-row3">
-             <td class="analyte-data-col" id="analyte-row3-col1">R2C2</td>
-             <td class="analyte-data-col" id="analyte-row3-col2">R2C2</td>
+             <td class="analyte-data-col" id="analyte-row3-col1">{{analyte.row3[0]}}</td>
+             <td class="analyte-data-col" id="analyte-row3-col2">{{analyte.row3[1]}}</td>
           </tr>
 
           <tr class="analyte-data-row" id="analyte-row4">
-             <td class="analyte-data-col" id="analyte-row4-col1">${analyteTableData.row4[0]}</td>
-             <td class="analyte-data-col" id="analyte-row4-col2">${analyteTableData.row4[1]}</td>
+             <td class="analyte-data-col" id="analyte-row4-col1">{{analyte.row4[0]}}</td>
+             <td class="analyte-data-col" id="analyte-row4-col2">{{analyte.row4[1]}}</td>
           </tr>
             
         </table>
+{% endfor %}
+</div>
 
-
-<h1>This is a Temporary Page Used To test some stuff.</h1>
 
 <main id="content-pane">
 
@@ -45,7 +55,7 @@ var items = [{ title: "foo", id: 1 }, { title: "bar", id: 2}];
     
     <input type="input" id="retrieve-analyte-input" />
           
-    <button id="retrieve-analyte" onclick="setAnalyteTable(JSON.stringify({{analyteData}}))">Retrieve Analyte</button>
+    <button id="retrieve-analyte" onclick="retrieveAnalyte()">Retrieve Analyte</button>
     <button id="clear-analyte" onclick="clearAnalyteTable()">Clear Analyte</button>
 
     <div id="analyte-search-output"></div>
