--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -14,6 +14,7 @@ templateClass: tmpl-home
 
 <span id="battle-ring">
   <h3 class="blue">Mongoose</h3>
+  {# time to figure out how to use this for CSS background property #}
   {% image "./img/mongoose.jpeg", "an evil mongoose", "100vw" %}
   <h3>Snake</h3>
    {% image "./img/snake.jpeg", "a suspicious snake", "100vw" %}
