--- a/_includes/layouts/kids.njk
+++ b/_includes/layouts/kids.njk
@@ -373,7 +373,7 @@ document.addEventListener("DOMContentLoaded", (event) => {
         </center>
           <div id="game-info">
             <span>
-              {% image "./img/duck.png", "a cunning duck", "100vw", "duck-score-image" %}
+              {% image "./img/duck.png", "a cunning duck", "100vw", "duck-score-image", "png", "../img" %}
               
               <h4>Score</h4>
               <h4 id="score"></h4>
