--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,8 @@
   --darkgray: #333;
   --navy: #17050F;
   --blue: #082840;
+  --light-blue: #ebf8ff;
+  --complementary-green: #08403C;
   --white: #fff;
 }
 
@@ -19,7 +21,17 @@ body {
   margin: 0;
   font-family: -apple-system, system-ui, sans-serif;
   color: var(--darkgray);
-  background-color: var(--white);
+  background-color: var(--light-blue);
+}
+body {
+  display: grid;
+  grid-template-columns: 1fr min(70rem, 90%) 1fr;
+}
+body > * {
+  grid-column: 2;
+}
+h1, h2, h3, h4, h5, h6 {
+  color: var(--complementary-green);
 }
 p:last-child {
   margin-bottom: 0;
@@ -40,6 +52,7 @@ a[href]:visited {
   color: var(--navy);
 }
 main {
+  background-color: var(--white);
   padding: 1rem;
 }
 main :first-child {
@@ -84,6 +97,7 @@ pre {
   padding: 1em;
   margin: .5em 0;
   background-color: #f6f6f6;
+  outline: 1px dashed var(--complementary-green);
 }
 code {
   word-break: break-all;
