--- a/_includes/layouts/kids.njk
+++ b/_includes/layouts/kids.njk
@@ -225,7 +225,8 @@ document.addEventListener("DOMContentLoaded", (event) => {
     flowerLocation: [50, 50],
     velocity: 5,
     duckImage: null,
-    flowerImage: null
+    flowerImage: null,
+    backgroundImage: null
   };
 
   function setDuckImage() {
@@ -243,6 +244,14 @@ document.addEventListener("DOMContentLoaded", (event) => {
     gameState.flowerImage.id = "flower-image";
   }
 
+  function setBackgroundImage() {
+    const backgroundImage = new Image();
+    gameState.backgroundImage = backgroundImage;
+    gameState.backgroundImage.src = "../img/duck-canvas-background.png"; // Set source path
+    gameState.backgroundImage.id = "canvas-background-image";
+  }
+
+  setBackgroundImage()
   setDuckImage()
   setFlowerImage()
 
@@ -339,7 +348,8 @@ document.addEventListener("DOMContentLoaded", (event) => {
 
   function playDuckGame() {
     console.info("playing");
-    gameStart();
+    gameStart()
+    drawBackgroundImage()
     handleImageUpdates()
     console.info("gameState", gameState)
   }
@@ -372,13 +382,24 @@ document.addEventListener("DOMContentLoaded", (event) => {
       );
   }
 
+  const drawBackgroundImage = () => {
+    const canvas = document.getElementById('duck-hunt-canvas');
+    const context = canvas.getContext('2d');
+    context.drawImage(
+        gameState.backgroundImage,
+        0,
+        0,
+        CANVAS_DIMENSIONS,
+        CANVAS_DIMENSIONS
+      );
+  }
+
   function begin() {
     console.info("drawing");
     document.body.onkeydown = (event) => {
       down(event)
       // draw images after key change
     };
-
   }
   begin();
 });
